--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Install xmllint
+      run: sudo apt-get install -y zsh
+
     - name: assemble
       run: ./assemble.sh --pkg
 
