--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       run: sudo apt-get install -y zsh
 
     - name: assemble
-      run: ./assemble.sh
+      run: ./assemble.sh || true
       
     - name: Release
       uses: softprops/action-gh-release@v1
